fixed horizontal scrolling and added some aesthetic padding to archiv

--- a/archive.css
+++ b/archive.css
@@ -12,7 +12,7 @@
     grid-gap: 10px;
     background-color: white;
     /* justify-content: space-around; */
-    width: 100vw;
+    max-width: 1200px;
     margin: 0;
     padding-bottom: 30px;
     align-self: center;
@@ -32,8 +32,8 @@
     display: inline-block;
     grid-template-rows: 20% 80%;
     width: 100%;
-    margin: 0mm;
     padding: 0 2rem;
+    margin: 25px 0;
 }
 
 
@@ -48,17 +48,21 @@
 
 
 .article-row {
-    height: 200px;
+    height: 250px;
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    scrollbar-width: none;
 }
 
 .article-row::-webkit-scrollbar {
     display: none;
 }
+
 
 .article {
     flex: 0 0 auto;
