--- a/stories.css
+++ b/stories.css
@@ -8,7 +8,7 @@
 .stories-main {
     display: grid;
     grid-template-columns: repeat(6, minmax(100px, 1fr));
-    grid-template-rows: repeat(8, minmax(100px, 1fr));
+    /* grid-template-rows: repeat(8, minmax(100px, 1fr)); */
     column-gap: 1rem;
     row-gap: 1rem;
 }
@@ -54,7 +54,13 @@
 .old-story {
     grid-column: auto;        
     grid-row: span 1;
+    font-size: 0.7rem;
 
+}
+
+
+.old-story h1 {
+    font-size: .8rem;
 }
 
 
